--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.5",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
